--- a/qml.qrc
+++ b/qml.qrc
@@ -11,5 +11,6 @@
         <file>assets/agency_fb.ttf</file>
         <file>assets/infoIcon.png</file>
         <file>assets/warningIcon.png</file>
+        <file>assets/NOTIFY BELL ON.png</file>
     </qresource>
 </RCC>
